<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Fitness Plan</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_training">Training</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>

    <string name="text_url">"https://raw.githubusercontent.com/d3lk0n/trainingsplan/main/"</string>

    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_add">Add Exercise</string>

    <string name="text_edit">Editing Exercise</string>
    <string name="text_description">Description</string>
    <string name="text_difficulty">Difficulty</string>
    <string name="text_exercise_name">Exercise Name</string>
    <string name="text_save">Save</string>

    <string name="text_delete">Delete Exercise?</string>
    <string name="text_delete_y">Yes</string>
    <string name="text_delete_n">No</string>

    <string name="button_pick_date">Pick Date</string>
    <string name="button_pick_exercises">Add Exercise</string>

    <string name="text_choose_date">Choose Date first</string>
    <string name="text_choose_exercise">See Exercises</string>

    <string name="text_preferences_title_1">Design Settings</string>
    <string name="text_preferences_title_2">Filter Settings</string>
    <string name="text_font_preferences">Change Font</string>
    <string name="text_nightmode_preferences">Toggle Nightmode</string>

</resources>