<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_exercises"
        android:layout_width="@dimen/home_button_width"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/title_exercises"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="@dimen/home_button_width"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/title_calendar"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_exercises"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button_training"
        android:layout_width="@dimen/home_button_width"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/title_training"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="@dimen/home_button_width"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/title_settings"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_training"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>