<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/delete_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_delete"/>

    <Button
        android:id="@+id/button_delete_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_y"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/button_delete_no"
        app:layout_constraintTop_toBottomOf="@id/delete_text_view"/>

    <Button
        android:id="@+id/button_delete_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_n"
        app:layout_constraintLeft_toLeftOf="@id/button_delete_yes"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_text_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>