<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment">

    <Button
        android:id="@+id/button_show_calender"
        android:layout_width="@dimen/calendar_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_pick_date"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_calendar_date" />


    <TextView
        android:id="@+id/text_calendar_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_show_calender"
        app:layout_constraintTop_toTopOf="@id/button_show_calender"
        tools:text="Pick Date..." />

    <Button
        android:id="@+id/button_add_exercises"
        android:layout_width="@dimen/calendar_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_pick_exercises"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_show_calender"
        app:layout_constraintLeft_toLeftOf="@id/button_show_calender"
        app:layout_constraintRight_toRightOf="@id/button_show_calender" />

    <TextView
        android:id="@+id/text_calendar_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_show_calender"
        app:layout_constraintTop_toTopOf="@id/button_show_calender"
        tools:text="Pick Date..." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_calendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/button_calendar_save"
        app:layout_constraintTop_toBottomOf="@id/button_add_exercises"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".ui.calendar.CalendarFragment"
        tools:layout_editor_absoluteX="-27dp"
        tools:listitem="@layout/item_exercise_short">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_calendar_save"
        android:layout_width="@dimen/calendar_button_width"
        android:layout_height="wrap_content"
        android:text="@string/text_save"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>